feat(11-issue): hash table structure

--- a/docs/assets/css/base.css
+++ b/docs/assets/css/base.css
@@ -6,3 +6,18 @@ html, body {
     font-size: 16px;
     font-weight: normal;
 }
+
+pre {
+    padding: 16px;
+    background: #282c34;
+    color: #abb2bf;
+    overflow: auto;
+}
+
+.guest-result {
+    display: block;
+    background: #282c34;
+    color: #abb2bf;
+    padding: 16px;
+    font-size: 16px;
+}
